package solid.openclosed.badexample;

public class Circle extends Shape {
}
