package solid.openclosed.badexample;

public class Rectangle extends Shape{
}
