@startuml

title __BADEXAMPLE's Class Diagram__\n

  namespace solid.openclosed.badexample {
    class solid.openclosed.badexample.Circle {
    }
  }
  

  namespace solid.openclosed.badexample {
    class solid.openclosed.badexample.Main {
        {static} + main()
    }
  }
  

  namespace solid.openclosed.badexample {
    class solid.openclosed.badexample.Rectangle {
    }
  }
  

  namespace solid.openclosed.badexample {
    class solid.openclosed.badexample.Shape {
        {static} + calculateSumOfAllAreas()
    }
  }
  

  solid.openclosed.badexample.Circle -up-|> solid.openclosed.badexample.Shape
  solid.openclosed.badexample.Rectangle -up-|> solid.openclosed.badexample.Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
